--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,6 @@ tiled = "0.11.1"
 
 
 [dependencies.raylib]
-version = "3.7.0"
+version = "4.5.0"
+git = "https://github.com/bitten2up/raylib-rs"
+branch = "4.5.0"
