--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,7 +10,8 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  linux:
+    name: Build Linux
 
     runs-on: ubuntu-latest
 
@@ -18,7 +19,15 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install Dependencies
       run: sudo apt update && sudo apt install -y libasound2-dev libx11-dev libxrandr-dev libxi-dev libgl1-mesa-dev libglu1-mesa-dev libxcursor-dev libxinerama-dev build-essential
+
     - name: Build for Linux
       run: cargo build --verbose --release
+
     - name: Run tests
       run: cargo test --verbose
+
+    - uses actions/upload-artifact@3
+    - name: Upload Artifacts
+      with:
+        name: yarg-linux
+        path: target/release/yarg
