--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -68,4 +68,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: yarg-windows.exe
-          path: target/release/yarg.exe
+          path: target/x86_64-pc-windows-gnu/release/yarg.exe
