--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,14 +24,21 @@ jobs:
     - name: Build
       run: cargo build --verbose --release
 
-    - name: Run tests
-      run: cargo test --verbose
+#    - name: Run tests
+#      run: cargo test --verbose
+
+    - name: Package artifacts
+      run: |
+        mkdir artifacts
+        cp -rv resources/ artifacts/
+        cp -v target/release/yarg artifacts/yarg-linux
+        tar -cvzf yarg-linux.tar.gz artifacts
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: yarg-linux
-        path: target/release/yarg
+        name: yarg-linux.tar.gz
+        path: yarg-linux.tar.gz
 
   windows_x64:
     name: Windows x86_64
@@ -42,7 +49,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install Dependencies
-        run: sudo apt update && sudo apt install -y libasound2-dev libx11-dev libxrandr-dev libxi-dev libgl1-mesa-dev libglu1-mesa-dev libxcursor-dev libxinerama-dev build-essential
+        run: sudo apt update && sudo apt install -y zip libasound2-dev libx11-dev libxrandr-dev libxi-dev libgl1-mesa-dev libglu1-mesa-dev libxcursor-dev libxinerama-dev build-essential
 
       - uses: actions-rs/toolchain@v1
         with:
@@ -57,15 +64,21 @@ jobs:
           command: build
           args: --target x86_64-pc-windows-gnu --verbose --release
 
-      - name: Run tests
-        uses: actions-rs/cargo@v1
-        with:
-          use-cross: true
-          command: test
-          args: --target x86_64-pc-windows-gnu --verbose
+#      - name: Run tests
+#        uses: actions-rs/cargo@v1
+#        with:
+#          use-cross: true
+#          command: test
+#          args: --target x86_64-pc-windows-gnu --verbose
+
+      - name: Package artifacts
+        run: |
+          mkdir artifacts
+          cp -rv resources/ artifacts/
+          cp -v target/release/yarg.exe artifacts/yarg-windows.exe
+          zip -rv yarg-windows.zip artifacts
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: yarg-windows.exe
-          path: target/x86_64-pc-windows-gnu/release/yarg.exe
+          path: yarg-windows.zip
