fixed missing name for yarg windows zip

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -81,4 +81,5 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
+          name: yarg-windows.zip
           path: yarg-windows.zip
