--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,6 +21,8 @@ jobs:
     - name: Install Dependencies
       run: sudo apt update && sudo apt install -y libasound2-dev libx11-dev libxrandr-dev libxi-dev libgl1-mesa-dev libglu1-mesa-dev libxcursor-dev libxinerama-dev build-essential
 
+    - uses: Swatinem/rust-cache@v2
+
     - name: Build
       run: cargo build --verbose --release
 
@@ -55,6 +57,8 @@ jobs:
           toolchain: stable
           target: x86_64-pc-windows-gnu
           override: true
+
+      - uses: Swatinem/rust-cache@v2
 
       - name: Build
         uses: actions-rs/cargo@v1
